# seance

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
crates/seance-core/: Cargo.toml
crates/seance-core/src/: join.rs  lib.rs  model.rs  records.rs  rotation.rs  state.rs  tail.rs
crates/seance-core/tests/: pipeline.rs
src/: demo.ts  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/bridge/: tauri.ts
src/filter/: controls.ts  filter.ts
src/model/: types.ts
src/render/: dom.ts  presence.ts  row.ts  timeline.ts
src/store/: store.ts
src/util/: time.ts
