# seance — read-only observability for the sentinel/ghost agent-security stack.
# Workspace: the pure correctness core (seance-core, fully unit-tested on any
# platform) and the Tauri desktop shell (src-tauri, macOS-built in CI).
[workspace]
resolver = "2"
members = ["crates/seance-core", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/StressTestor/seance"
authors = ["StressTestor"]
rust-version = "1.77.2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
seance-core = { path = "crates/seance-core" }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
