[package]
name = "seance"
description = "Read-only observability for the sentinel/ghost agent-security stack."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

# The Tauri library target the desktop binary links against.
[lib]
name = "seance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri runtime. No extra features: no asset protocol, no tray, no updater.
tauri = { version = "2", features = [] }
# Native file watching (FSEvents on macOS, inotify on Linux) with a poll fallback.
notify = "8"
# The pure correctness core (tail / rotation / join / offset persistence).
seance-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
